refactor: 수정 (#87)